# ChangeLog for sys-kernel/calculate-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-sources-2.6.38.3 (19 Apr 2011)

  19 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.38.3.ebuild:
  Bump version.

  22 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-sources-2.6.32.33.ebuild, calculate-sources-2.6.36.4.ebuild,
  calculate-sources-2.6.37.4.ebuild:
  Unmask kernel.

*calculate-sources-2.6.36.4 (17 Mar 2011)
*calculate-sources-2.6.32.33 (17 Mar 2011)

  17 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.32.33.ebuild, +calculate-sources-2.6.36.4.ebuild:
  Bump version.

*calculate-sources-2.6.36.3 (14 Feb 2011)

  14 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +calculate-sources-2.6.36.3.ebuild:
  Bump version.

*calculate-sources-2.6.32.28 (31 Jan 2011)

  31 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.32.28.ebuild:
  New kernel version for server.

*calculate-sources-2.6.36.2 (28 Dec 2010)

  28 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.36.2.ebuild:
  Bump version.

*calculate-sources-2.6.35.8 (30 Oct 2010)

  30 Oct 2010; Трацевский Александр <alex@gentoo.org>
  -calculate-sources-2.6.35.7.ebuild, +calculate-sources-2.6.35.8.ebuild:
  version bump

*calculate-sources-2.6.35.7 (13 Oct 2010)

  13 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +files/4600_sched-bfs_2.6.35.patch, -calculate-sources-2.6.35.6.ebuild,
  +calculate-sources-2.6.35.7.ebuild, +files/4700_BFQ_2.6.35.patch,
  metadata.xml:
  New kernel version with patches BFQ and BFS.

*calculate-sources-2.6.32.24 (10 Oct 2010)

  10 Oct 2010; Трацевский Александр <alex@gentoo.org>
  -calculate-sources-2.6.32.22-r1.ebuild,
  -calculate-sources-2.6.32.23.ebuild, +calculate-sources-2.6.32.24.ebuild:
  bump version

*calculate-sources-2.6.35.6 (28 Sep 2010)