@@ -1,1 +1,1 @@
->=sys-kernel/calculate-sources-2.6.33
+>=sys-kernel/calculate-sources-2.6.39
