@@ -36,15 +36,17 @@ DIST patch-2.6.36.4.bz2 186814 RMD160 ed06acb39f2e272d388bb04810d0d9626c70fa55 S
 DIST patch-2.6.37.4.bz2 139328 RMD160 1e5ee5b5ea9cf52dc839ae49d83687024acbab9a SHA1 baacae8e8bbfbb80cfa9aa2a0aff7ac8e315b56a SHA256 6c0352055d5502fb177eb573a881629dcf5dc979342293fde08d782a17b5d68c
 DIST patch-2.6.38.2.bz2 47827 RMD160 ea9caa39c7a94ee7aca536270dfb47e22f28ecd9 SHA1 d12aee147a1dc94ea8cc86f12155c52a6a526066 SHA256 8279d5b883cb44f4d3cf28b4db9b3c37c9c6dba45bb5884e8601950ee59892c4
 DIST patch-2.6.38.3.bz2 77144 RMD160 481a5f3286be77edafb237ec7bd8ee49fff52fe0 SHA1 c53f1e25e33be6793173f437da8f8e12af60498f SHA256 cc7fe37725d940987800c73c38484e7c8388936b332fca9918aae4dca15be10b
-EBUILD calculate-sources-2.6.32.27.ebuild 741 RMD160 be7ac9ba69c0fdaac93557404c547621e1c93937 SHA1 cfa2b0ae9e5b1d6e134b28c055e4532bd7948a9d SHA256 64eb8b8bcc41963a457ea343aba414ae7e388260912b5e170db5e9298c23176c
-EBUILD calculate-sources-2.6.32.28.ebuild 754 RMD160 84f99a822f8d4078ffbd2373d40fd905a134794b SHA1 7808e3c4e2a54f9955b120dcbcf85f2fd8ab396b SHA256 959bb169c8427191cbf9a4e5c74e871bf699ae0eef17068fbc85b24d2bd55599
+DIST patch-2.6.38.4.bz2 103177 RMD160 24f922204d8ec7ecd8a53e108dc1a0c45c432ec8 SHA1 9d454b361bc9926d010bd5170ecf4ba2ec32b1fd SHA256 64abfd999ac9416db143293528f73a0b88ac287bf4d075556dc7859017d97687
+EBUILD calculate-sources-2.6.32.27.ebuild 743 RMD160 7a7373e2089b89fa1b455beaa7ffa76df55a2a7c SHA1 68e23b452535a1428bf26f69c77f173cf5f14c8c SHA256 16c77287e57348c52c4eac9a540dc444420dd1ce5cf9e894329a0fcbaf53929a
+EBUILD calculate-sources-2.6.32.28.ebuild 756 RMD160 5de42dce259cfb0023ad8df8e33fff648c30d1d1 SHA1 05312fed930cf3126498ce6539e0babc210489ac SHA256 52e676fe69d5361125a564bfaf0be5fd4263c5242e8b54c469f0b500a52ecf33
 EBUILD calculate-sources-2.6.32.33.ebuild 747 RMD160 77bb94e00e846a787758c292ad449687ef756d08 SHA1 b907c1681d7b749780b519e9c4d17032fab3da84 SHA256 2ca22d6ad7b2e2a20d42c77462043bc359e36dc73d144231b758ac408885e988
 EBUILD calculate-sources-2.6.35.9.ebuild 1324 RMD160 42d73ad5fcc292c90df73cbb0b4933ab7fbf4c74 SHA1 7a23fb44ad946e45f804bc9e7539905e36545124 SHA256 94fd25687d0f182ae4fa6a59c91605dbb326bffa171195bf92f837e96d3e6d64
-EBUILD calculate-sources-2.6.36.2.ebuild 1330 RMD160 c56242f09611ce06d193b9aae1acd42369b119ae SHA1 a02dde56690d2c9d99d7b8d21eb60cc7a15ce6c3 SHA256 ea756887d381b6fff444d5efe7f97c69d4917240ff93dd12f2d804a0fe9353ad
-EBUILD calculate-sources-2.6.36.3.ebuild 1330 RMD160 ea0f8e3d725f9acdbc0ada775565a9214aae2066 SHA1 f6efacc1b71261c4302a539eb6e9f4a033afa583 SHA256 1ccec7bb325127cd3703e99763b467c96b660bc297ac38a888c8138ac4b3608e
-EBUILD calculate-sources-2.6.36.4.ebuild 1323 RMD160 ecb6cf249532f9a433998d28090e24c7fac07230 SHA1 720402d6d706442ad16caa683a759732920c6763 SHA256 ec8750d3edb912949380570f7170233757a9e854b87b1e6126988984a1a073f4
-EBUILD calculate-sources-2.6.37.4.ebuild 1361 RMD160 e38a207a34b65fb836b2c04ca396235d52a43985 SHA1 fc6cdb63c260c00e9ddb2376e8dc40f8f2e9c2e0 SHA256 4fc12a27e9fc5050c979693f00c92158a17f75541b9f0c73c32faca47987e5d5
-EBUILD calculate-sources-2.6.38.2.ebuild 741 RMD160 95397fefb54edc985b8d81bdede0a785164ceeab SHA1 3d6199f19278b9cd535537bb2d377cb8d9627ba8 SHA256 e4b9370aa0be58589f86c78f61c788a1e45b9fef2e2667a3a9256adba48f834c
+EBUILD calculate-sources-2.6.36.2.ebuild 1332 RMD160 6ac1bdc9aa88a71979a8240515f6c2e82a745c04 SHA1 9a0b64e14e7c6c54afaadbab6b1988c68923c5dc SHA256 b573a726df88495a8dbfc645425a2b67f3c633807fb596f3643c739eba9dc487
+EBUILD calculate-sources-2.6.36.3.ebuild 1332 RMD160 ff88d3de72d412ae707b69177ca0bc6b4935cb4a SHA1 dfda89fbb23caa81e30e91abb66f23f01bce42df SHA256 33167fc25a44a6a42bbfbe21b6d16242a728b0b4c02a46a0241f17a1ad51106c
+EBUILD calculate-sources-2.6.36.4.ebuild 1325 RMD160 ca84789928429048f21834dc50b31cd921bfef72 SHA1 fae947a05ee0e179167a19eec2597475ad4aaff7 SHA256 261e22b1f6000039b006e00eca83a524d4614a6cfb329b35cfa09180cbb086c6
+EBUILD calculate-sources-2.6.37.4.ebuild 1363 RMD160 561f6dba1255bb37fa01773783a317dd7fe5962d SHA1 d81892ab54e7e29816b1803b08f8e55d9481e70e SHA256 78dd68dceacc46140b9b16f11c052cfc757e7105cf7569f11f24a7f18848286b
+EBUILD calculate-sources-2.6.38.2.ebuild 743 RMD160 40697f7e540a667f4a9b8ac19ecd12345e1446c9 SHA1 baf81ce99dd9e0d2900cc47e98a89b83cbd1cee3 SHA256 cef0d37d8e5568162939a6ef87c9749c35dca0db14ce02f2a344fb408de7c68f
 EBUILD calculate-sources-2.6.38.3.ebuild 744 RMD160 4d0334c6dd67a0a89aabb809239e79f52c4941cb SHA1 18a81f5fc9d309104dff70d96d46b5cb161c1492 SHA256 e997164cc8fcf5fd474c39cf35e518dea55878e4131a4037248aaf79cae9d3c7
-MISC ChangeLog 5569 RMD160 f3b637ae3db31ca6bc14dd40514f46ec748036c1 SHA1 0f558079236ad9a21e5a5c8793593754e3796d9e SHA256 42f8d623bc83008746a02aa3ae1c3043eee534e1139ae5cc9554e50f30619928
+EBUILD calculate-sources-2.6.38.4.ebuild 744 RMD160 4d0334c6dd67a0a89aabb809239e79f52c4941cb SHA1 18a81f5fc9d309104dff70d96d46b5cb161c1492 SHA256 e997164cc8fcf5fd474c39cf35e518dea55878e4131a4037248aaf79cae9d3c7
+MISC ChangeLog 5984 RMD160 eddbee10fe749464a9f9b964580ecbb6a84aaaa2 SHA1 adbace907f5f09e3ee6f4353fce4f2f040ef7f4c SHA256 0a175cd8254f1aec1bb7f0168b00678faffcef2fbfd7780ddc27c88aebe0acbe
 MISC metadata.xml 523 RMD160 855108e020b3f1fe32f843accc94a57f15affa0e SHA1 7fbeb862ff719c9ef63925b7f18104ff6eac27dd SHA256 997dc6d02e44eef86cc9653d7588b9f65e9033f02e28b3a8d98f48df82561f3c
