@@ -2,6 +2,15 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.38.4 (25 Apr 2011)
+
+  25 Apr 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  calculate-sources-2.6.32.27.ebuild, calculate-sources-2.6.32.28.ebuild,
+  calculate-sources-2.6.36.2.ebuild, calculate-sources-2.6.36.3.ebuild,
+  calculate-sources-2.6.36.4.ebuild, calculate-sources-2.6.37.4.ebuild,
+  calculate-sources-2.6.38.2.ebuild, +calculate-sources-2.6.38.4.ebuild:
+  Bump version
+
 *calculate-sources-2.6.38.3 (19 Apr 2011)
 
   19 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
